objects/BMCServiceDesk__BMC_HardwareSystemComponent__c.object
<CustomObject>
    <description>BMC_HardwareSystemComponent: CMDB Class that stores information about physical objects, such as disks, disk drives, display screens, keyboards, printers, motherboards, and chips.   This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PNPDeviceID__c</fullName>
        <label>PNP Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PowerManagementCapabilities__c</fullName>
        <label>Power Management Capabilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Power Saving Modes Entered Automatically</fullName>
                </value>
                <value>
                    <fullName>Power State Settable</fullName>
                </value>
                <value>
                    <fullName>Power Cycling Supported</fullName>
                </value>
                <value>
                    <fullName>Timed Power On Supported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemAvailability__c</fullName>
        <label>System Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Running/Full Power</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Power Off</fullName>
                </value>
                <value>
                    <fullName>Off Line</fullName>
                </value>
                <value>
                    <fullName>Off Duty</fullName>
                </value>
                <value>
                    <fullName>Degraded</fullName>
                </value>
                <value>
                    <fullName>Not Installed</fullName>
                </value>
                <value>
                    <fullName>Install Error</fullName>
                </value>
                <value>
                    <fullName>Power Save - Unknown</fullName>
                </value>
                <value>
                    <fullName>Power Save - Low Power Mode</fullName>
                </value>
                <value>
                    <fullName>Power Save - Standby</fullName>
                </value>
                <value>
                    <fullName>Power Cycle</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hardware System Component</label>
    <nameField>
        <label>BMC_HardwareSystemComponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hardware System Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>